@@ -1,0 +1,63 @@
+<?php
+namespace SJBR\StaticInfoTables\Domain\Model;
+/***************************************************************
+*  Copyright notice
+*
+*  (c) 2011-2012 Armin Rüdiger Vieweg <info@professorweb.de>
+*  (c) 2013 Stanislas Rolland <typo3(arobas)sjbr.ca>
+*
+*  All rights reserved
+*
+*  This script is part of the TYPO3 project. The TYPO3 project is
+*  free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or
+*  (at your option) any later version.
+*
+*  The GNU General Public License can be found at
+*  http://www.gnu.org/copyleft/gpl.html.
+*
+*  This script is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*  GNU General Public License for more details.
+*
+*  This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+/**
+ * The Country Zone model
+ *
+ * @copyright Copyright belongs to the respective authors
+ * @license http://www.gnu.org/licenses/gpl.html GNU General Public License, version 3 or later
+ */
+class CountryZone extends \TYPO3\CMS\Extbase\DomainObject\AbstractEntity {
+	/**
+	 * ###LANG_NAME### name of the country zone
+	 * @var string
+	 */
+	protected $nameEn = '';
+
+	/**
+	 * Sets the ###LANG_NAME### name.
+	 *
+	 * @param string $name###LANG_ISO_CAMEL###
+	 *
+	 * @return void
+	 */
+	public function setName###LANG_ISO_CAMEL###($name###LANG_ISO_CAMEL###) {
+		$this->name###LANG_ISO_CAMEL### = $name###LANG_ISO_CAMEL###;
+	}
+
+	/**
+	 * Returns ###LANG_NAME### name. If empty returns the localName.
+	 *
+	 * @return string
+	 */
+	public function getName###LANG_ISO_CAMEL###() {
+		if ($this->name###LANG_ISO_CAMEL### === '') {
+			return $this->getLocalName();
+		}
+		return $this->name###LANG_ISO_CAMEL###;
+	}
+}
+?>
