@@ -1,6 +1,7 @@
 2013-02-26  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #45872: Generate xliff language file for language pack
+	* Resolves #45875: Generate domain models partials for language pack
 
 2013-02-24  Stanislas Rolland  <typo3@sjbr.ca>
 
